     sync.  See lib/python/AccessControl/ZopeSecurityPolicy.py.

   - Change acquisition wrappers to implement the descr get slot
     directly, thus speeding the use of the slot.


  after Zope 2.8b1 

    Features added

      - Included BTreeFolder2

    Bugs fixed
  
      - Collector #1233: ported ZOPE_CONFIG patch from Zope 2.7 to Zope 2.8


  Zope 2.8b1 (2005/04/24)

    Features added

      - Added lazy: TAL expression and fixed defer: expression for python
        expression

      - ZCatalog.CatalogBrains: An _unrestrictedGetObject method has
        been added.

      - ZODB transactions now support savepoints. See
        transaction/savepoint.txt.  These will replace
        subtransactions.

    Bugs fixed
  
      - Collector #1754: Fixed import of 'transaction' in
        'zopectl adduser' (which wasy dying with a NameError).

      - Collector #1750: StructuredText: fixed handling of image URLs
        with query string

      - Collector #1748: Fixed SIGSEGV in Acquisition

      - Hotfix_20050405:  classes defined in untrusted code could shadow
        the roles of methods defined as protected by their bases.

      - Collector #1656: Fixed enumeration within untrusted code
        (forward-port from 2.7 branch).

      - Collector #1721: Fixed handling of an empty indexed_attrs parameter


  Zope 2.8a2 (2005/04/02)

    Features added

      - ZCatalog.CatalogBrains:  'getObject' now raises errors, rather than
        returning None, in cases where the path points either to a nonexistent
        object (in which case it raises NotFound) or to one which the user
        cannot access (raising Unauthorized).  Sites which rely on the old
        behavior can restore setting a new zope.conf option,
        'catalog-getObject-raises', to "off".

        This compatibility option will be removed in Zope 2.10.

      - PluginIndexes: the ZCatalog's "Indexes" tab now show the number of