@@ -31,6 +31,9 @@ Zope Changes
   
       - Collector #1233: ported ZOPE_CONFIG patch from Zope 2.7 to Zope 2.8
 
+      - Collector #1751: Improved error reporting reporting during the 
+        startup phase
+
 
   Zope 2.8b1 (2005/04/24)
 
